# SentrySearch

./: .env.example  .gitignore  README.md  app.py  bm25_retriever.py  main.py  markdown_generator.py  ml_agentic_retriever.py  ml_guidance_generator.py  ml_knowledge_base_builder.py  pyproject.toml  railway.json  requirements.txt  run_api.py  run_app.py  section_validator.py  threat_intel_tool.py  validation_criteria.py  vercel.json  worker.js  wrangler.toml
.github/workflows/: ci.yml  codex-pr-review.yml  keepalive.yml
dev/: check_local_setup.py  smoke_api.py
docs/: review-trigger-check.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/dev/: check-admin-surface.mjs  check-analytics-surface.mjs  check-auth-surface.mjs  check-dashboard-surface.mjs  check-export-surface.mjs  check-generate-surface.mjs  check-landing-surface.mjs  check-report-detail-surface.mjs  check-reports-surface.mjs  check-sample-surface.mjs  check-search-surface.mjs  check-settings-surface.mjs  check-surface-coverage-regressions.mjs  check-surface-coverage.mjs  run-surface-checks.mjs  (+1 more)
ml_knowledge_base/: bm25_documents.json  bm25_index.pkl  chunks_backup.jsonl
scripts/: add_auth_guard.py  create_admin_user.py  direct_categorization_update.py  import_to_annotator.py  init_database.py  setup_s3.py  setup_storage.py  sync_to_github.sh  update_categorizations.py
terraform/: README.md  deploy.sh  main.tf  outputs.tf  terraform-permissions.json  variables.tf
tests/: test_opencode_client.py  test_report_service.py  test_smoke_api.py  test_threat_profile_generator.py
(+71 files in other folders)
