[project]
name = "sentrysearch"
version = "0.1.0"
description = "AI-powered threat intelligence platform backend and local validation tooling."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=22.0.0",
    "anthropic>=0.57.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "chromadb>=0.4.0",
    "fastapi>=0.115.0",
    "gradio-client>=1.10.0",
    "gradio>=5.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "orjson>=3.0.0",
    "pandas>=2.0.0",
    "pillow>=8.0.0",
    "pinecone>=7.0.0",
    "psycopg[binary]>=3.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.17.0",
    "tenacity>=8.0.0",
    "uvicorn>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "ruff>=0.12.0",
    "ty>=0.0.1a0",
]

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
